<resources>
    <!-- General -->
    <string name="app_name">Traincut</string>
    <string name="title_home">Home</string>
    <string name="title_log">Log</string>
    <string name="title_preferences">Preferences</string>
    <string name="fab_add_content_desc">Add a new entry in the log</string>
    <string name="view_entry">View entry</string>
    <string name="add_entry">Add entry</string>
    <string name="edit_entry">Edit entry</string>
    <string name="accept">Accept</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <!-- Log fragment -->
    <string name="log_empty">No entries were found</string>
    <string name="log_empty_content_desc">No entries picture</string>
    <string name="entry_icon_desc">An icon which shows the image associated with the train, if available.</string>

    <!-- View fragment -->
    <string name="view_edit">Edit</string>
    <string name="content_desc_view_edit">Displays a form in which the entry data can be modified.</string>
    <string name="view_delete">Delete</string>
    <string name="content_desc_view_delete">Deletes this entry from the log</string>
    <string name="view_delete_dialog">Do you really want to proceed?</string>
    <string name="view_delete_dialog_desc">This will <strong>permanently</strong> remove this entry from the log.</string>

    <!-- Entry fragment -->
    <string name="entry_origin">Origin</string>
    <string name="entry_origin_mandatory">Origin*</string>
    <string name="entry_destination">Destination</string>
    <string name="entry_destination_mandatory">Destination*</string>
    <string name="entry_departure">Departure</string>
    <string name="entry_departure_mandatory">Departure*</string>
    <string name="entry_late_departure">The train departed late</string>
    <string name="entry_real_departure">Real departure</string>
    <string name="entry_arrival">Arrival</string>
    <string name="entry_arrival_mandatory">Arrival*</string>
    <string name="entry_late_arrival">The train arrived late</string>
    <string name="entry_real_arrival">Real arrival</string>
    <string name="entry_name">Train service</string>
    <string name="entry_train_number">Train number</string>
    <string name="entry_seat">Seat number</string>
    <string name="entry_seat_class">Seat class</string>
    <string name="entry_car">Car number</string>
    <string name="entry_series">Serial number</string>
    <string name="entry_comments">Comments</string>
    <string name="entry_save">Save</string>
    <string name="content_desc_entry_save">Saves the information given by the user into the log.</string>
    <string name="error_entry_load">Data retrieving error</string>
    <string name="error_entry_load_desc">An error has occurred while trying to retrieve log\'s information.</string>
    <string name="error_entry_row_desc">The requested entry wasn\'t found in the log.\nThis may be due to a bug.</string>
    <string name="error_mandatory_field">Please fill this void in order to continue</string>
    <string name="entry_unsaved_dialog">There are unsaved changes</string>
    <string name="entry_unsaved_dialog_desc">Do you want to exit without saving the changes you\'ve made?</string>
</resources>
