<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Traincut allows you to log information about the trains you travel into.
  ~
  ~ Copyright (C) 2022 Anael González Paz
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="es.terax.traincut.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_log"
        android:name="es.terax.traincut.ui.log.LogFragment"
        android:label="@string/title_log"
        tools:layout="@layout/fragment_log" >
        <action
            android:id="@+id/action_navigation_log_to_entryFragment"
            app:destination="@id/entryFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="es.terax.traincut.ui.preferences.PreferencesFragment"
        android:label="@string/title_preferences"
        tools:layout="@layout/fragment_preferences" />
    <fragment
        android:id="@+id/entryFragment"
        android:name="es.terax.traincut.ui.entry.EntryFragment"
        android:label="@string/add_entry"
        tools:layout="@layout/fragment_entry" >
        <argument
            android:name="isEdit"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="editId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>
