<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Traincut allows you to log information about the trains you travel into.
  ~
  ~ Copyright (C) 2022 Anael González Paz
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:layout_marginBaseline="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="?attr/materialCardViewOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardUseCompatPadding="false"
        app:contentPaddingBottom="0dp"
        app:contentPaddingLeft="0dp"
        app:contentPaddingRight="0dp"
        app:contentPaddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="December 31st" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:contentDescription="@string/entry_icon_desc"
                android:src="@drawable/ic_baseline_train_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDate"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textDestination"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/entry_destination"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/destinationTime"
                app:layout_constraintTop_toBottomOf="@+id/textOrigin"
                tools:text="Destination" />

            <TextView
                android:id="@+id/textOrigin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingStart="1dp"
                android:paddingTop="8dp"
                android:paddingEnd="1dp"
                android:text="@string/entry_origin"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textDestination"
                app:layout_constraintTop_toBottomOf="@+id/textDate"
                tools:ignore="TextContrastCheck"
                tools:text="@string/entry_origin" />

            <TextView
                android:id="@+id/destinationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingBottom="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintBottom_toBottomOf="@+id/textDestination"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/textDestination"
                tools:text="09:55" />

            <TextView
                android:id="@+id/originTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:layout_constraintEnd_toEndOf="@+id/destinationTime"
                app:layout_constraintTop_toTopOf="@+id/textOrigin"
                tools:text="09:30" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
